--- a/ToDo-App/src/App.css
+++ b/ToDo-App/src/App.css
@@ -8,13 +8,16 @@
   justify-content: center;
 }
 
-.todo-create {
+.main {
   width: 500px;
+}
+
+.todo-create {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: center;
-  
 }
 
 .todo-input {
@@ -46,8 +49,7 @@
     align-items: center;
     justify-content: space-between;
     border: 1px solid rgb(128, 208, 240);
-    padding: 10px;
-   
+    padding: 10px; 
 }
 
 .todo-icons {
