--- a/ToDo-App/src/App.css
+++ b/ToDo-App/src/App.css
@@ -50,6 +50,7 @@
     justify-content: space-between;
     border: 1px solid rgb(128, 208, 240);
     padding: 10px; 
+    margin-top: 5px;
 }
 
 .todo-icons {
