--- a/image-carousel/src/App.css
+++ b/image-carousel/src/App.css
@@ -1,42 +1,50 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+h2 {
+  font-size: 80px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.slider {
+  position: relative;
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.slide {
+  min-width: 50%;
+  height: 60vh;
+  font-size: 50px;
 }
 
-.card {
-  padding: 2em;
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
-.read-the-docs {
-  color: #888;
+.rightArrow,
+.leftArrow {
+  position: absolute;
+  z-index: 1;
+  font-size: 40px;
+  top: 46%;
+  color: white;
+  background: black;
+  border-radius: 9999px;
+  padding: 4px 8px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.leftArrow {
+  left: -5%;
+}
+
+.rightArrow {
+  right: -5%;
 }
