--- a/github-user-search/src/App.css
+++ b/github-user-search/src/App.css
@@ -1,42 +1,46 @@
-#root {
-  max-width: 1280px;
+* {
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+}
+
+.main {
+  width: 100%;
+  max-width: 700px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.main input, button {
+  width: 340px;
+  padding: 10px;
+  border-radius: 5px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main button {
+  margin-left: 10px;
+  background-color: #52f04f;
+  border: 1px solid #52f04f;
+  cursor: pointer;
+  color: white
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.main input {
+  border: 1px solid black;
 }
 
-.card {
-  padding: 2em;
+.user {
+  display: flex;
+  flex-direction: column;
 }
 
-.read-the-docs {
-  color: #888;
+.user-comp {
+    height: 100px;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  
 }
